# Capsule

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  rustfmt.toml
.github/workflows/: ci.yml  release.yml
scripts/: generate-test-archive.ps1  generate-test-archive.sh
src/: main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  menu.rs
testdata/: README.md
