[package]
name = "capsule"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "capsule_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.2", features = [] }

[dependencies]
tauri = { version = "2.9", features = [] }


tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2.0.0-beta.6"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "0.6"
tar = "0.4"
flate2 = "1.0"
xz2 = "0.1"
bzip2 = "0.4"
base64 = "0.22"
